# graphene

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  train.py
.github/workflows/: package.yml  python-precommit.yml
examples/: cifar_datamodule.py  resnet.py
graphene/: __init__.py
graphene/callbacks/: __init__.py  callback.py  model_summary.py  progress_bar.py  wandb.py
graphene/core/: trainer.py
graphene/loops/: loop.py  train_loop.py  validation_loop.py
graphene/metrics/: __init__.py  accumulation.py  accuracy.py
requirements/: requirements.dev.in  requirements.in
scripts/: install.sh  lib.sh  lock-requirements.sh
src/callbacks/: callback.py  model_summary.py  progress_bar.py  wandb.py
src/core/: __init__.py  datamodule.py  trainer.py  trainmodule.py
src/loops/: loop.py  train_loop.py  validation_loop.py
src/metrics/: __init__.py  accumulation.py  accuracy.py  loss.py  metric.py
